@@ -4,6 +4,8 @@
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     i18n_domain="extropy">
 
+  <include package=".browser" />
+
   <cmf:registerDirectory
       name="skins"
       directory="skins"
